src/c/vkernels/capi/capi.hpp


enum {
  VK_OK = 0,
  VK_ERROR_INVALID_ARGUMENT = 1,
  VK_ERROR_OUT_OF_RANGE = 2,
  VK_ERROR_UNSUPPORTED = 3,
  VK_ERROR_INTERNAL = 4
};
const char* vk_version(void);
int vk_has_cuda(void);
const char* vk_last_error(void);
int vk_last_error_code(void);
void vk_free(void* p);
int32_t vk_add(const float* a, size_t a_len, const float* b, size_t b_len,
               float* out, size_t out_len);
int32_t vk_scale(const float* x, size_t x_len, float alpha, float* out,
                 size_t out_len);
int32_t vk_relu(const float* x, size_t x_len, float* out, size_t out_len);
int32_t vk_sum(const float* x, size_t x_len, float* out);
int32_t vk_max(const float* x, size_t x_len, float* out);
int32_t vk_gemm(size_t M, size_t N, size_t K, float alpha, const float* A,
                size_t A_len, const float* B, size_t B_len, float beta,
                float* C, size_t C_len);
int32_t vk_direct_lds_fill_bf16(void* lds_dst, const void* global_src,
                                size_t elements);
int32_t vk_fp4_to_bf16_dequant(const uint8_t* packed, size_t packed_len,
                               uint16_t* out, size_t out_len, float scale);
int vk_use_async_copy_default(void);
int32_t vk_mfma_f32_16x16x16bf16(float* c, const uint32_t* a,
                                 const uint32_t* b, int cbsz, int abid,
                                 int blgp);
int32_t vk_gemm_bf16(size_t M, size_t N, size_t K, float alpha,
                     const uint16_t* A, const uint16_t* B, float beta,
                     uint16_t* C);
void vk_gemm_bf16_config(size_t M, size_t N, size_t K, int* bm, int* bn,
                         int* bk, int* threads);
int32_t vk_mla_fwd(int B, int H, int S_q, int S_kv, int q_start,
                   int kv_start, int kv_lora_rank, int qk_rope_head_dim,
                   float scale, const float* q, const float* k_c,
                   const float* k_pe, const float* v_c, float* out);
void vk_mla_config(int S_q, int kv_lora_rank, int qk_rope_head_dim,
                    int* bq, int* bn, int* threads);
int32_t vk_kda_layer_norm_gated(const float* x, const float* weight,
                                const float* gate, float* out, int N,
                                int D, float eps);
int32_t vk_kda_gate_chunk_cumsum(const float* g, float* intra_log,
                                 float* inter_log, int B, int H,
                                 int n_chunks, int chunk_size);
int32_t vk_kda_naive_delta_rule_fwd(const float* q, const float* k,
                                    const float* v, const float* g,
                                    const float* beta, float* out, int B,
                                    int H, int S, int D);
int32_t vk_kda_delta_rule_fwd(const float* q, const float* k,
                              const float* v, const float* g,
                              const float* beta, float* out, int B, int H,
                              int S, int D, int chunk_size);
int32_t vk_kda_delta_rule_intra(const float* q, const float* k,
                                const float* v, const float* g,
                                const float* beta, const float* intra_log,
                                const float* inter_state, float* u, int B,
                                int H, int S, int D, int chunk_size,
                                int chunk_idx);
int32_t vk_kda_delta_rule_inter(const float* k, const float* v,
                                const float* g, const float* beta,
                                const float* intra_log, const float* u,
                                float* inter_state, int B, int H, int S,
                                int D, int chunk_size, int chunk_idx);
int32_t vk_kda_gla_fwd_o(const float* q, const float* k, const float* g,
                         const float* beta, const float* intra_log,
                         const float* inter_state, const float* u,
                         float* out, int B, int H, int S, int D,
                         int chunk_size);
int32_t vk_kda_pack_bitmatrix(const uint8_t* bits, uint8_t* packed,
                              size_t n_bits);
int32_t vk_mxfp4_moe_quant(const uint16_t* A, uint8_t* packed,
                           uint8_t* scales, int M, int hidden,
                           int group_size);
int32_t vk_mxfp4_moe_sort(const uint16_t* A, const int32_t* sorted_ids,
                          uint16_t* A_sorted, int M, int hidden, int top_k,
                          int EM);
int32_t vk_mxfp4_moe_sort_scales(const uint8_t* scales,
                                 const int32_t* sorted_ids,
                                 uint8_t* scales_sorted, int M,
                                 int n_groups, int top_k, int EM);
int32_t vk_mxfp4_moe_scatter_reduce(const float* partial,
                                    const float* topk_w,
                                    const int32_t* sorted_ids, float* out,
                                    int M, int width, int top_k, int EM);
int32_t vk_mxfp4_moe_scatter_reduce_q(const uint8_t* partial_q,
                                      const uint8_t* partial_s,
                                      const float* topk_w,
                                      const int32_t* sorted_ids, float* out,
                                      int M, int width, int top_k, int EM,
                                      int group_size);
int32_t vk_fused_moe_mxfp4(const uint16_t* A, const uint8_t* w13,
                           const uint8_t* w13_scale, const uint8_t* w2,
                           const uint8_t* w2_scale, const int32_t* sorted_ids,
                           const float* topk_w_sorted,
                           const int32_t* expert_ids, uint16_t* act_scratch,
                           float* out, int M, int hidden, int ispp, int top_k,
                           int EM, int group_size, float swiglu_limit,
                           int activation, float beta, float linear_beta,
                           const float* b13, const float* b2);
int32_t vk_moe_align_block_size(const int32_t* topk_ids, int32_t M,
                                int32_t top_k, int32_t block_size,
                                int32_t num_experts, int32_t* sorted_ids,
                                int32_t* expert_ids, int32_t* out_EM);
size_t vk_moe_align_block_size_max_em(int32_t M, int32_t top_k,
                                      int32_t block_size,
                                      int32_t num_experts);
typedef struct vk_device vk_device;
vk_device* vk_device_new(int index); 
void vk_device_delete(vk_device* d);
int vk_device_index(const vk_device* d);
int vk_device_supports_peer(const vk_device* d, const vk_device* other);
int vk_device_eq(const vk_device* a, const vk_device* b);
int32_t vk_device_set_current(vk_device* d);
int32_t vk_device_sync(vk_device* d);
typedef struct vk_stream vk_stream;
vk_stream* vk_stream_new(void);
void vk_stream_delete(vk_stream* s);
int32_t vk_stream_submit(vk_stream* s, void (*fn)(void*), void* ctx);
void vk_stream_wait(vk_stream* s);
size_t vk_stream_submitted(const vk_stream* s);
typedef struct vk_topology {
  int32_t rank;
  int32_t world;
  int32_t next; 
  int32_t prev; 
} vk_topology;
int32_t vk_ring_rank(int32_t rank, int32_t world, vk_topology* out);
int32_t vk_build_ring_topology(int32_t world, vk_topology** out,
                               size_t* out_count);
typedef struct vk_queue vk_queue;   
typedef struct vk_channel vk_channel; 
vk_queue* vk_queue_new(void);
void vk_queue_delete(vk_queue* q);
int32_t vk_queue_push(vk_queue* q, const float* data, size_t len);
int32_t vk_queue_pop(vk_queue* q, float** out_data, size_t* out_len);
void vk_queue_close(vk_queue* q);
int vk_queue_closed(const vk_queue* q);
vk_channel* vk_channel_new(vk_queue* out, vk_queue* in);
void vk_channel_delete(vk_channel* c);
int32_t vk_channel_send(vk_channel* c, const float* data, size_t len);
int32_t vk_channel_recv(vk_channel* c, float** out_data, size_t* out_len);
int vk_channel_closed(const vk_channel* c);
int32_t vk_make_ring_channels(int32_t world, vk_channel*** out,
                              size_t* out_count);
typedef struct vk_overlap vk_overlap;
typedef struct vk_staged_run_1d {
  const void* src;
  size_t dst_offset;
  size_t length;
} vk_staged_run_1d;
typedef struct vk_gather_2d {
  const void* src;
  size_t src_stride;
  size_t dst_offset;
  size_t dst_stride;
  size_t width;
  size_t height;
} vk_gather_2d;
typedef struct vk_staged_run_2d {
  const void* src;
  size_t dst_offset;
  size_t src_stride;
  size_t dst_stride;
  size_t width;
  size_t height;
} vk_staged_run_2d;